fixed the carousel caption style on mobile devices

--- a/styles/3-pages/_1carousel.sass
+++ b/styles/3-pages/_1carousel.sass
@@ -69,3 +69,10 @@
 .logo-caption
    width: 150px
    margin-top: -10%
+
+// from 440px and down
+@media(max-width: 440px)
+  .carousel-caption
+    h1
+      font-size: 44px
+      display: inline-block
